# agentic-ai-learning

./: .gitignore  README.md  pyproject.toml
Projects/: CURRICULUM_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  STARTER_TEMPLATES.md
Projects/week1/: .gitignore  .pre-commit-config.yaml  INSTALL_PYTHON.md  README.md  pyproject.toml  requirements.txt
Projects/week1/.github/workflows/: ci.yml
Projects/week1/docker/: Dockerfile  docker-compose.yml
Projects/week1/scripts/: install_dependencies.sh  setup.sh
Projects/week1/src/: __init__.py
Projects/week1/tests/: test_environment.py
Projects/week2/: MODAL_SETUP.md  README.md  eval_modal.py  requirements.txt  train_modal.py
Projects/week2/notebooks/: 01_dataset_preparation.ipynb  02_finetuning_qlora.ipynb  03_model_evaluation.ipynb  04_alignment_pain_points.ipynb
Projects/week3/: README.md
Projects/week4/: README.md
Projects/week5/: README.md
Projects/week6/: README.md
Projects/week7/: README.md
Projects/week8/: README.md
